<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/main_menu_header"
        app:layout_constraintBottom_toTopOf="@id/divideHomeScreenGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/main_menu_header_image" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/divideHomeScreenGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <ScrollView
        android:id="@+id/scrollview_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divideHomeScreenGuideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_altitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/ic_altitude"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    app:srcCompat="@drawable/ic_altitude"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/altitude"
                    app:tint="@color/white"/>

                <Button
                    android:id="@+id/btn_altitude"
                    android:text="@string/altitude"
                    style="@style/Base.TextAppearance.AppCompat.Widget.Button.MainMenuButton"
                    android:onClick="navigateTo"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/ic_temperature"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@string/temperature"
                    app:srcCompat="@drawable/ic_temperature"
                    app:tint="@color/primary"
                    tools:ignore="VectorDrawableCompat" />

                <Button
                    android:id="@+id/btn_temperature"
                    android:text="@string/temperature"
                    style="@style/Base.TextAppearance.AppCompat.Widget.Button.MainMenuButton"
                    android:onClick="navigateTo"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_position_on_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/ic_find_me"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    app:srcCompat="@drawable/ic_map"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/find_me"
                    app:tint="@color/white"/>

                <Button
                    android:id="@+id/btn_position_on_map"
                    android:text="@string/find_me"
                    style="@style/Base.TextAppearance.AppCompat.Widget.Button.MainMenuButton"
                    android:onClick="navigateTo"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>